Trino configurations added