@@ -1,12 +1,18 @@
 -server
--Xmx16G
--XX:+UseG1GC
+-Xmx2G
+-XX:InitialRAMPercentage=80
+-XX:MaxRAMPercentage=80
 -XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
+-XX:+ExitOnOutOfMemoryError
 -XX:+HeapDumpOnOutOfMemoryError
--XX:OnOutOfMemoryError=kill -9 %p
--XX:HeapDumpPath=/var/trino/heapdump.hprof
+-XX:-OmitStackTraceInFastThrow
+-XX:ReservedCodeCacheSize=512M
+-XX:PerMethodRecompilationCutoff=10000
+-XX:PerBytecodeRecompilationCutoff=10000
 -Djdk.attach.allowAttachSelf=true
--Djava.security.egd=file:/dev/urandom
--XX:+UnlockDiagnosticVMOptions
--XX:G1NumCollectionsKeepPinned=10000000
+-Djdk.nio.maxCachedBufferSize=2000000
+-Dfile.encoding=UTF-8
+# Allow loading dynamic agent used by JOL
+-XX:+EnableDynamicAgentLoading
+--enable-native-access=ALL-UNNAMED 
